<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.IncomeAddFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/etIncomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/choose_title"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddIncomeTitle" />

    <TextView
        android:id="@+id/tvAddIncomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_incomes"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etIncomeAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/choose_amount"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIncomeTitle" />

    <Spinner
        android:id="@+id/spinnerIncome"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:spinnerMode="dialog"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIncomeAmount" />

    <Button
        android:id="@+id/btnIncomeAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/insert_income"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShowInDate" />

    <Button
        android:id="@+id/btnSelectInDate"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/choose_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIncome" />

    <TextView
        android:id="@+id/tvShowInDate"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_orange_light"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIncome"
        tools:layout_editor_absoluteX="24dp" />

</android.support.constraint.ConstraintLayout>